// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangelogComponent should compile 1`] = `
<pm-changelog
  changelog$={[Function Observable]}
  http={[Function HttpClient]}
>
  <mat-card
    class="mat-card"
  >
    
    
    <div />
    
  
  </mat-card>
</pm-changelog>
`;

exports[`ChangelogComponent should handle failure to load file gracefully 1`] = `
<div
  id="root2"
  ng-version="5.0.1"
>
  <mat-card
    class="mat-card"
  >
    
  
    <div>
      <p>
        Error loading changelog.md
      </p>
      

    </div>
    

  </mat-card>
</div>
`;

exports[`ChangelogComponent should render changelog 1`] = `
<div
  id="root1"
  ng-version="5.0.1"
>
  <mat-card
    class="mat-card"
  >
    
  
    <div>
      <p>
        Error loading changelog.md
      </p>
      

    </div>
    

  </mat-card>
</div>
`;
